landing page html and css

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,73 +8,48 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <nav class="nav-brand">
-      <div class="menu-brand">
-        WeHive
+    <nav>
+      <div class="nav-brand">
+        <div class="menu-brand">WeHive</div>
         <ul class="menu-links">
           <li>Sign up</li>
           <li>Demo</li>
         </ul>
       </div>
     </nav>
-    
-    <main role="main">
-      <header role="banner">
-
-    <div id="wrapper">
+  <main role="main">
+    <header role="banner">
+      <div id="wrapper">
         <div id="landing-page-banner">
-        <h1 id=>WeHive</h1>
-         </div>
+          <h1>WeHive</h1>
+        </div>
         <div id="landing-page-transform">
           <h1>Achieve</h1>
         </div>
       </div>
-        <h1>Together</h1>
+      <h1>Together</h1>
+    </header>
+    <section>
+      <button class="hexagon-btn">Join the Hive</button>
+    <section>
+      <p>Studies show that people have higher success rates when collaborating with others....</p>
+    </section>
+    <section>
+      <header>
+        <h3>You have what it takes</h3>
       </header>
-      <section>
-        <header>
-            <h3></h3>
-        </header>
-        <p></p>
-      </section>
-      <section>
-        <header>
-            <h3></h3>
-        </header>
-        <p></p>
-      </section>
-      <section>
-        <header>
-            <h3></h3>
-        </header>
-        <p></p>
-      </section>
-      <section>
-        <header>
-            <h3></h3>
-        </header>
-        <form class='signup-form'>
-            <div>
-              <label for="first-name">First name</label>
-              <input placeholder='First Name' type="text" name='first-name' id='first-name' />
-            </div>
-            <div>
-              <label for="last-name">Last name</label>
-              <input type="text" name='last-name' id='last-name' placeholder='Last Name' />
-            </div>
-            <div>
-              <label for="username">Email</label>
-              <input type="text" name='username' id='username' />
-            </div>
-            <div>
-              <label for="password">Password</label>
-              <input type="password" name='password' id='password' />
-            </div>
-            <button type='submit'>Sign Up</button>
-        </form>
-      </section>
-    </main>
-    <footer role="content-info">Footer</footer>
+      <div>Identify what's important to you</div>
+      <div>Set Your Goals</div>
+    </section>
+    <section>
+      <header>
+        <h3>How it Works....</h3>
+      </header>
+      <h3>Find Groups</h3>
+      <h3>Create Groups</h3>
+    </section>
+      
+    <button class="hexagon-btn">WeHive Demo</button>
   </body>
 
 </html>
