--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -12,8 +12,9 @@
       <div class="nav-brand">
         <div class="menu-brand">WeHive</div>
         <ul class="menu-links">
-          <li>Sign up</li>
           <li>Demo</li>
+          <li>Sign up</li>
+          <li>Sign in</li>
         </ul>
       </div>
     </nav>
