create group html

--- a/create-group/create-group.html
+++ b/create-group/create-group.html
@@ -29,6 +29,15 @@
             access.</em
           >
         </p>
+        <label for="goal-type">Type of Goal</label>
+        <select id="goal-type">
+          <option value="one-time-event">One-time event</option>
+          <option value="current-goal">Current Goal</option>
+          <option value="stretch-goal">Stretch Goal</option>
+        </select>
+
+        <label for="target-date">Target date</label>
+        <input type="date" />
       </form>
     </main>
   </body>
