edit landing page

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -14,7 +14,7 @@
         <ul class="menu-links">
           <li>Demo</li>
           <li>Sign up</li>
-          <li>Sign in</li>
+          <li>Log in</li>
         </ul>
       </div>
     </nav>
@@ -33,21 +33,22 @@
     <section>
       <button class="hexagon-btn">Join the Hive</button>
     <section>
-      <p>Studies show that people have higher success rates when collaborating with others....</p>
+      <p>Studies show that people have higher success rates when collaborating on common goals with others....</p>
     </section>
     <section>
       <header>
-        <h3>You have what it takes</h3>
+        <h2>Focus on what matters</h2>
+        <h3>With people who matter</h3>
       </header>
-      <div>Identify what's important to you</div>
-      <div>Set Your Goals</div>
     </section>
     <section>
       <header>
-        <h3>How it Works....</h3>
+        <h2>How it Works</h2>
       </header>
-      <h3>Find Groups</h3>
-      <h3>Create Groups</h3>
+      <h3>Set Goals</h3>
+      <h3>Join the Hive</h3>
+      <h3>Achieve Together</h3>
+
     </section>
       
     <button class="hexagon-btn">WeHive Demo</button>
