--- a/log-in/log-in.html
+++ b/log-in/log-in.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Log in</title>
-    <link rel="stylesheet" type="text/css" href="signup.css" />
+    <link rel="stylesheet" type="text/css" href="log-in.css" />
   </head>
   <body>
     <nav>
