added items to dashboard

--- a/create-goal/create-goal.html
+++ b/create-goal/create-goal.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Create a Group</title>
-    <link rel="stylesheet" type="text/css" href="create-group.css" />
+    <title>Create a Goal</title>
+    <link rel="stylesheet" type="text/css" href="create-goal.css" />
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     <main role="main">
       <form class="create-group">
         <fieldset>
-          <h3>Create a Group</h3>
+          <h3>Create a Goal</h3>
           <label for="group-setting">Privacy Setting</label>
           <select id="group-setting">
             <option value="private">Private</option>
@@ -48,8 +48,8 @@
 
           <label for="tag">Add tags</label>
           <input type="tag" id="tag" />
-          <label for="description">Description</label>
-          <textarea id="description"> </textarea>
+          <label for="message">Message to the group</label>
+          <textarea id="message"></textarea>
           <div>
             <a href="#">Share link with friends</a>
           </div>
