--- a/log-in/log-in.html
+++ b/log-in/log-in.html
@@ -17,7 +17,8 @@
   <main role="main">
       <form class="signup-form">
         <h3>Log in</h3>
-        <h6>Don't have an account?<span><a href="#">Sign up</a></span></h6>
+        <h4>Don't have an account?</h4>
+          <a href="#">Sign up</a>
       
             <label for="e-mail">Email</label>
             <input type="text" name="e-mail" id="e-mail" />
