added wireframe for group dashboard

--- a/create-goal/create-goal.html
+++ b/create-goal/create-goal.html
@@ -51,6 +51,9 @@
           <label for="message">Message to the group</label>
           <textarea id="message"></textarea>
           <div>
+            <button type="submit">Save Goal</button>
+          </div>
+          <div>
             <a href="#">Share link with friends</a>
           </div>
         </fieldset>
