--- a/group-dashboard/group-dashboard.html
+++ b/group-dashboard/group-dashboard.html
@@ -8,11 +8,64 @@
     <link rel="stylesheet" type="text/css" href="group-dashboard.css" />
   </head>
   <body>
-    <nav>
-      <div class="nav-brand">
-        <div class="menu-brand">WeHive</div>
-      </div>
-    </nav>
-    <main></main>
+  <nav>
+    <div class="nav-brand">
+      <div class="menu-brand">WeHive</div>
+    </div>
+    <ul class="menu-links">
+      <li>Log out</li>
+    </ul>
+  </nav>
+
+  <main>
+    <div class="side-bar-nav">
+      <h1>Charm of Bees</h1>
+      <em>(Members in Hive)</em>
+      <div class="group-members">
+        <li>Wendy (me)</li>
+        <li>Alex</li>
+        <li>Julia</li>
+        <button class="add-goal">Add Member</button>
+        <section>
+          <header>
+            <h1>Event: Plan mom's 75th birthday</h1>
+            <h2>Days left: 31 days</h2>
+            <h3>Our mission: <em>[Goal/intention from create a goal view]</em></h3>
+            <h4>Message: <em>[Message to group from create a goal view]</em></h4>
+          </header>
+        </section>
+        <section class="group-feed">
+          <h1>Hive Mind</h1>
+        <div class="feed-item">
+          <img
+            src="https://thumbs.dreamstime.com/z/bee-12202275.jpg"
+            width="30px"
+          />
+          <li><em>Alex added an action</em></li>
+          <p>Called catering. Food for 25 people within budget.</p>
+        </div>
+        <div class="feed-item">
+          <img
+            src="https://thumbs.dreamstime.com/z/bee-12202275.jpg"
+            width="30px"
+          />
+          <li><em>Wendy created a milestone</em></li>
+          <p>Book flights for out-of-country family members.</p>
+        <div class="feed-item">
+          <img
+            src="https://thumbs.dreamstime.com/z/bee-12202275.jpg"
+            width="30px"
+          />
+          <li><em>Julia made a comment</em></li>
+          <p>Let's order catering from her favorite restaurant instead.</p>
+        </div>
+      </section>
+      <section>
+        <h1>Contribute</h1>
+        <button>Add action</button>
+        <button>Add comment</button>
+        <button>Add milestone</button>
+      </section>
+    </div>
   </body>
-</html>
+ 
